--- a/tentang.html
+++ b/tentang.html
@@ -116,7 +116,7 @@
                 pembelajaran dimana para siswa dapat belajar dimana saja dan kapan saja.
                 Guru dapat mengupload video dirinya sendiri sedang mengajar, sehingga tanpa takut adanya jam
                 kosong atau pun keadaan yang tidak terduga apapun karena Learnify dapat diakses dimana saja dan
-                kapan saja.Y
+                kapan saja.
             </p>
         </div>
         <div class="row about_inner">
